Improving readme file

--- a/SQLFlowUi/Components/Pages/EditPreIngestionCSV.razor
+++ b/SQLFlowUi/Components/Pages/EditPreIngestionCSV.razor
@@ -184,12 +184,12 @@
                                                                     AllowVerticalResize="true"
                                                                     Editable="true"
                                                                     ReadOnly="false"
-                                                                    MaxHeight="20em">
+                                                                    MaxHeight="20em"
+                                                                    Width="100%">
                                                 </CodeMirror6Wrapper>
                                             </div>
                                         </div>
                                     </RadzenRow>
-                                    <RadzenTextArea style="display: block; width: 100% ;height: 10vh" Name="preFilter" />
                                 </ChildContent>
                             </RadzenFormField>
                         </RadzenRow>
