--- a/SQLFlowUi/Components/App.razor
+++ b/SQLFlowUi/Components/App.razor
@@ -13,10 +13,6 @@
     <link rel="icon" href="/favicon.ico" />
     <script src="/js/audiorecorder.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
 
     <script>
 
@@ -135,10 +131,10 @@
             position: relative;
             width: 100%;
             overflow: auto;
-            height: 400px;
+            height: 200px;
             max-height: 400px;
             border: 1px solid #ccc;
-            background-color: #f9f9f9;
+            background-color: #292c30;
         }
 
         /* Fullscreen styling */
@@ -149,9 +145,9 @@
             right: 0;
             bottom: 0;
             width: 100vw;
-            height: 100vh;
+            height: 150vh;
             z-index: 9999;
-            background-color: white;
+            background-color: #292c30;
             padding: 20px;
             display: flex;
             flex-direction: column;
