--- a/SQLFlowUi/Components/Pages/Search.razor
+++ b/SQLFlowUi/Components/Pages/Search.razor
@@ -33,6 +33,12 @@
     }
 }
 
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
+
 @attribute [Authorize]
 <PageTitle>@GetTitle()</PageTitle>
  
